# tauri-demo-app

./: .prettierrc.cjs  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy-macos.yml  deploy.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  schema.rs
src-tauri/src/commands/: mod.rs  todo_commands.rs
src-tauri/src/lib/: db.rs
src-tauri/src/models/: todo.rs
src-tauri/src/services/: mod.rs  todo_services.rs
src/components/ui/: scroll-area.tsx
src/lib/: utils.ts
~/.tauri/: todo-app.key  todo-app.key.pub
